// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> Render must match inacive() 1`] = `
<div>
  <div>
    <details
      class="dropdown details-reset details-overlay d-inline-block dropdown-inactive"
    >
      <summary
        aria-haspopup="true"
        class="btn"
      >
        <div
          class="d-flex flex-justify-between flex-items-center dropdown-inactive"
        >
          <div>
            Dropdown
          </div>
           
          <div
            class="dropdown-caret"
          />
        </div>
      </summary>
      <ul
        class="dropdown-menu dropdown-menu-se width-full"
      >
        <li>
          <a
            aria-current="page"
            class="dropdown-item"
            href="#url"
          >
            Dropdown Item 1
          </a>
        </li>
        <li>
          <a
            class="dropdown-item"
            href="#url"
          >
            Dropdown Item 2
          </a>
        </li>
        <li>
          <a
            class="dropdown-item"
            href="#url"
          >
            Dropdown Item 3
          </a>
        </li>
        <li>
          <a
            class="dropdown-item"
            href="#url"
          >
            Dropdown Item 4
          </a>
        </li>
      </ul>
    </details>
  </div>
</div>
`;

exports[`<Dropdown /> Render must match regular() 1`] = `
<div>
  <div>
    <details
      class="dropdown details-reset details-overlay d-inline-block"
    >
      <summary
        aria-haspopup="true"
        class="btn"
      >
        <div
          class="d-flex flex-justify-between flex-items-center"
        >
          <div>
            Dropdown
          </div>
           
          <div
            class="dropdown-caret"
          />
        </div>
      </summary>
      <ul
        class="dropdown-menu dropdown-menu-se width-full"
      >
        <li>
          <a
            aria-current="page"
            class="dropdown-item"
            href="#url"
          >
            Dropdown Item 1
          </a>
        </li>
        <li>
          <a
            class="dropdown-item"
            href="#url"
          >
            Dropdown Item 2
          </a>
        </li>
        <li>
          <a
            class="dropdown-item"
            href="#url"
          >
            Dropdown Item 3
          </a>
        </li>
        <li>
          <a
            class="dropdown-item"
            href="#url"
          >
            Dropdown Item 4
          </a>
        </li>
      </ul>
    </details>
  </div>
</div>
`;
